--- a/pom.xml
+++ b/pom.xml
@@ -542,6 +542,10 @@
 			<version>${cxf.version}</version>
 			<exclusions>
 				<exclusion>
+					<groupId>org.jboss.spec.javax.rmi</groupId>
+					<artifactId>jboss-rmi-api_1.0_spec</artifactId>
+				</exclusion>
+				<exclusion>
 					<groupId>org.apache.geronimo.specs</groupId>
 					<artifactId>geronimo-javamail_1.4_spec</artifactId>
 				</exclusion>
@@ -582,6 +586,10 @@
 			<artifactId>cxf-rt-rs-service-description-swagger</artifactId>
 			<version>${cxf.version}</version>
 			<exclusions>
+				<exclusion>
+					<groupId>org.jboss.spec.javax.rmi</groupId>
+					<artifactId>jboss-rmi-api_1.0_spec</artifactId>
+				</exclusion>
 				<exclusion>
 					<artifactId>jackson-databind</artifactId>
 					<groupId>com.fasterxml.jackson.core</groupId>
