--- a/ide/ui/ide-group-all/pom.xml
+++ b/ide/ui/ide-group-all/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
 		<artifactId>dirigible-ide-ui-parent</artifactId>
@@ -168,5 +168,10 @@
 			<artifactId>dirigible-ide-ui-form-builder</artifactId>
 			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide-ui-image</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+	   </dependency>
 	</dependencies>
 </project>
