--- a/ide/ui/pom.xml
+++ b/ide/ui/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
 		<artifactId>dirigible-ide-parent</artifactId>
@@ -17,7 +17,7 @@
 	<modules>
 		<!-- Grouping Modules -->
 		<module>ide-group-all</module>
-		
+
 		<!-- Plugin Modules -->
 		<module>ide-branding</module>
 		<module>ide-console</module>
@@ -49,8 +49,9 @@
 		<module>ide-discussions</module>
 		<module>ide-websockets</module>
 		<module>ide-form-builder</module>
+		<module>ide-image</module>
 	</modules>
-	
+
 	<properties>
 		<license.header.location>../../licensing-header.txt</license.header.location>
 	</properties>
