--- a/releng/pom.xml
+++ b/releng/pom.xml
@@ -35,6 +35,7 @@
 		<module>server-runtime-keycloak</module>
 		<module>trial-all</module>
 		<module>server-minimal</module>
+		<module>spring-boot</module>
 	</modules>
 
 	<properties>
