--- a/releng/spring-boot/pom.xml
+++ b/releng/spring-boot/pom.xml
@@ -1,6 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
@@ -9,7 +10,7 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-    <name>Releng - Spring - Boot</name>
+	<name>Releng - Spring - Boot</name>
 	<artifactId>dirigible-spring-boot</artifactId>
 	<packaging>jar</packaging>
 
@@ -23,83 +24,80 @@
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-		    <groupId>ch.qos.logback</groupId>
-		    <artifactId>logback-core</artifactId>
-		    <version>${logback.version}</version>
-		    <scope>compile</scope>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
-		    <groupId>ch.qos.logback</groupId>
-		    <artifactId>logback-classic</artifactId>
-		    <version>${logback.version}</version>
-		    <scope>compile</scope>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<scope>compile</scope>
 		</dependency>
-	
+
 		<!-- Commons -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-commons-config</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-config</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- API -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-api</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
-		 	<exclusions>
-		 		<exclusion>
-		 			<groupId>org.eclipse.dirigible</groupId>
-		 			<artifactId>dirigible-database-dynamic</artifactId>
-		 		</exclusion>
-		 	</exclusions>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.eclipse.dirigible</groupId>
+					<artifactId>dirigible-database-dynamic</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
 		<!-- Repository -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-repository</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-repository-local</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-local</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
-		<!-- <dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-repository-master</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-repository-master</artifactId> 
+			<version>6.0.0-SNAPSHOT</version> </dependency> -->
 
 		<!-- Database -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-database</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
-		 	<exclusions>
-		 		<exclusion>
-		 			<groupId>org.eclipse.dirigible</groupId>
-		 			<artifactId>dirigible-database-dynamic</artifactId>
-		 		</exclusion>
-		 	</exclusions>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.eclipse.dirigible</groupId>
+					<artifactId>dirigible-database-dynamic</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-database-h2</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-h2</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-database-custom</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-custom</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Core Services -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-core</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-core</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Services -->
@@ -121,42 +119,29 @@
 		</dependency>
 
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-engine</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-engine</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- CMS -->
-		<!-- <dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-cms</artifactId>
-		 	<version>5.12.7</version>
-		 	<exclusions>
-				<exclusion>
-					<groupId>org.eclipse.dirigible</groupId>
-					<artifactId>dirigible-cms-managed</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.eclipse.dirigible</groupId>
-					<artifactId>dirigible-cms-database</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency> -->
-		
+		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-cms</artifactId> 
+			<version>5.12.7</version> <exclusions> <exclusion> <groupId>org.eclipse.dirigible</groupId> 
+			<artifactId>dirigible-cms-managed</artifactId> </exclusion> <exclusion> <groupId>org.eclipse.dirigible</groupId> 
+			<artifactId>dirigible-cms-database</artifactId> </exclusion> </exclusions> 
+			</dependency> -->
+
 		<!-- BPM -->
-		<!-- <dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-bpm</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-bpm</artifactId> 
+			<version>6.0.0-SNAPSHOT</version> </dependency> -->
 
 		<!-- IDE Plugins -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-ide</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-ide</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
-		
+
 		<!-- Templating Core -->
 		<dependency>
 			<groupId>org.eclipse.dirigible</groupId>
@@ -166,30 +151,27 @@
 
 		<!-- Templates Plugins -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-templates</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-templates</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Resources Plugins -->
 		<dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-resources</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-resources</artifactId>
+			<version>6.0.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- External API modules -->
-		<!-- <dependency>
-		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-ext</artifactId>
-		 	<version>6.0.0-SNAPSHOT</version>
-		</dependency> -->
+		<!-- <dependency> <groupId>org.eclipse.dirigible</groupId> <artifactId>dirigible-ext</artifactId> 
+			<version>6.0.0-SNAPSHOT</version> </dependency> -->
 
 		<!-- External -->
 		<dependency>
-		  <groupId>javax.annotation</groupId>
-		  <artifactId>jsr250-api</artifactId>
-		  <version>${jsr250-api.version}</version>
+			<groupId>javax.annotation</groupId>
+			<artifactId>jsr250-api</artifactId>
+			<version>${jsr250-api.version}</version>
 		</dependency>
 
 		<!-- External - Jetty -->
@@ -198,55 +180,71 @@
 			<artifactId>jetty-servlets</artifactId>
 			<version>${jetty.version}</version>
 		</dependency>
-		
+
 		<!-- Spring Boot -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring.boot.version}</version>
 		</dependency>
-		
+
+		<!-- CXF -->
 		<dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
-            <version>${cxf.version}</version>
-            <exclusions><!-- CXF uses java.util.logging by default -->
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        
-		<dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-rs-service-description-openapi-v3</artifactId>
-            <version>${cxf.version}</version>
-        </dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
+			<version>${cxf.version}</version>
+			<exclusions><!-- CXF uses java.util.logging by default -->
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 
 		<dependency>
-		    <groupId>org.webjars</groupId>
-		    <artifactId>webjars-locator</artifactId>
-		    <version>${webjars-locator}</version>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-rs-service-description-openapi-v3</artifactId>
+			<version>${cxf.version}</version>
 		</dependency>
-		
+
+		<!-- WebJars -->
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>webjars-locator</artifactId>
+			<version>${webjars-locator}</version>
+		</dependency>
+
+		<!-- Olingo -->
+		<dependency>
+			<groupId>org.apache.olingo</groupId>
+			<artifactId>olingo-odata2-lib</artifactId>
+			<version>${olingo.version}</version>
+			<type>pom</type>
+			<exclusions>
+				<exclusion>
+					<groupId>javax.ws.rs</groupId>
+					<artifactId>javax.ws.rs-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-		            <mainClass>org.eclipse.dirigible.services.spring.boot.DirigibleRestServiceApplication</mainClass>
-		        </configuration>
-		        <executions>
-		            <execution>
-		                <goals>
-		                    <goal>repackage</goal>
-		                </goals>
-		            </execution>
-		       </executions>
+					<mainClass>org.eclipse.dirigible.services.spring.boot.DirigibleRestServiceApplication</mainClass>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
