added built-in websockets

--- a/releng/spring-boot/pom.xml
+++ b/releng/spring-boot/pom.xml
@@ -188,6 +188,18 @@
 			<version>${spring.boot.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+			<version>${spring.boot.version}</version>
+		</dependency>
+
 		<!-- CXF -->
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
