--- a/templates/template-application-launchpad/src/main/resources/META-INF/dirigible/template-application-launchpad/resources/js/ui-core-ng-modules.js.template
+++ b/templates/template-application-launchpad/src/main/resources/META-INF/dirigible/template-application-launchpad/resources/js/ui-core-ng-modules.js.template
@@ -90,8 +90,8 @@ angular.module('ideUiCore', ['ngResource'])
 			$http({
 				url: relativePath + 'services/v4/js/ide/services/user-name.js',
 				method: 'GET'
-			}).success(function(data){
-				user.name = data;
+			}).then(function(data){
+				user.name = data.data;
 			});
 			return user;
 		}
