--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/report/pie/controller.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/report/pie/controller.js.template
@@ -48,7 +48,7 @@ angular.module('page')
 
 	$scope.load = function() {
 		$http.get(api)
-		.success(function(data) {
+		.then(function(data) {
 			var chartData = [];
 			for (var i = 0; i < data.length; i ++) {
 				chartData.push([#foreach ($property in $properties)data[i].${property.name}#if($foreach.hasNext), #end#end]);
