--- a/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/master-manage/index.html.template
+++ b/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/master-manage/index.html.template
@@ -103,7 +103,7 @@
 #else
 			${dollar}http.get('../../../../../../../../../services/v4/js/${launchpadName}/api/launchpad/views.js?extensionPoint=launchpad-${extensionName}-${perspectiveName}-${name}-view&pathSegments=6')
 #end
-			.success(function(views) {
+			.then(function(views) {
 				var master = [];
 				var details = [];
 
