--- a/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/master-manage/master/controller.js.template
+++ b/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/master-manage/master/controller.js.template
@@ -98,7 +98,7 @@ angular.module('page')
 
 	function ${property.name.toLowerCase()}OptionsLoad() {
 		${dollar}http.get(${property.name.toLowerCase()}OptionsApi)
-		.success(function(data) {
+		.then(function(data) {
 			$scope.${property.name.toLowerCase()}Options = data;
 		});
 	}
@@ -130,11 +130,11 @@ angular.module('page')
 	$scope.loadPage = function(pageNumber) {
 		$scope.dataPage = pageNumber;
 		${dollar}http.get(api + '/count')
-		.success(function(data) {
+		.then(function(data) {
 			$scope.dataCount = data;
 			$scope.dataPages = Math.ceil($scope.dataCount / $scope.dataLimit);
 			${dollar}http.get(api + '?${dollar}offset=' + ((pageNumber - 1) * ${dollar}scope.dataLimit) + '&${dollar}limit=' + ${dollar}scope.dataLimit)
-			.success(function(data) {
+			.then(function(data) {
 				$scope.data = data;
 			});
 		});
@@ -167,7 +167,7 @@ angular.module('page')
 	$scope.create = function() {
 		if (${dollar}scope.entityForm.${dollar}valid) {
 			${dollar}http.post(api, JSON.stringify(${dollar}scope.entity))
-			.success(function(data) {
+			.then(function(data) {
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
@@ -184,13 +184,13 @@ angular.module('page')
 			${dollar}http.put(api + '/' + ${dollar}scope.entity.${property.name}, JSON.stringify(${dollar}scope.entity))
 #end
 #end
-			.success(function(data) {
+			.then(function(data) {
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}).error(function(data) {
+			}), function(data) {
 				alert(JSON.stringify(data));
-			})
+			}
 		}
 	};
 
@@ -200,13 +200,13 @@ angular.module('page')
 		${dollar}http.delete(api + '/' + ${dollar}scope.entity.${property.name})
 #end
 #end
-		.success(function(data) {
+		.then(function(data) {
 			$scope.loadPage($scope.dataPage);
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
-		}).error(function(data) {
+		}), function(data) {
 			alert(JSON.stringify(data));
-		});
+		};
 	};
 
 	$scope.updateCalculatedProperties = function() {
