--- a/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/report/bar/controller.js.template
+++ b/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/report/bar/controller.js.template
@@ -48,7 +48,7 @@ angular.module('page')
 
 	$scope.load = function() {
 		$http.get(api)
-		.success(function(data) {
+		.then(function(data) {
 			var chartTicks = [];
 #foreach ($property in $properties)
 #if(!$foreach.isFirst())
