--- a/resources/resources-all/pom.xml
+++ b/resources/resources-all/pom.xml
@@ -72,6 +72,11 @@
 		</dependency>
 		<dependency>
 		    <groupId>org.webjars</groupId>
+		    <artifactId>angularjs</artifactId>
+		    <version>1.4.7</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.webjars</groupId>
 		    <artifactId>bootstrap</artifactId>
 		    <version>3.3.7</version>
 		</dependency>
