--- a/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/manage/controller.js.template
+++ b/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/manage/controller.js.template
@@ -95,7 +95,7 @@ angular.module('page')
 
 	function ${property.name.toLowerCase()}OptionsLoad() {
 		${dollar}http.get(${property.name.toLowerCase()}OptionsApi)
-		.success(function(data) {
+		.then(function(data) {
 			$scope.${property.name.toLowerCase()}Options = data;
 		});
 	}
@@ -127,11 +127,11 @@ angular.module('page')
 	$scope.loadPage = function(pageNumber) {
 		$scope.dataPage = pageNumber;
 		${dollar}http.get(api + '/count')
-		.success(function(data) {
+		.then(function(data) {
 			$scope.dataCount = data;
 			$scope.dataPages = Math.ceil($scope.dataCount / $scope.dataLimit);
 			${dollar}http.get(api + '?${dollar}offset=' + ((pageNumber - 1) * ${dollar}scope.dataLimit) + '&${dollar}limit=' + ${dollar}scope.dataLimit)
-			.success(function(data) {
+			.then(function(data) {
 				$scope.data = data;
 			});
 		});
@@ -164,11 +164,11 @@ angular.module('page')
 	$scope.create = function() {
 		if (${dollar}scope.entityForm.${dollar}valid) {
 			${dollar}http.post(api, JSON.stringify(${dollar}scope.entity))
-			.success(function(data) {
+			.then(function(data) {
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}).error(function(data) {
+			}, function(data) {
 				alert(JSON.stringify(data));
 			});
 		}
@@ -182,11 +182,11 @@ angular.module('page')
 #end
 #end
 
-			.success(function(data) {
+			.then(function(data) {
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}).error(function(data) {
+			}, function(data) {
 				alert(JSON.stringify(data));
 			})
 		}
@@ -198,11 +198,11 @@ angular.module('page')
 		${dollar}http.delete(api + '/' + ${dollar}scope.entity.${property.name})
 #end
 #end
-		.success(function(data) {
+		.then(function(data) {
 			$scope.loadPage($scope.dataPage);
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
-		}).error(function(data) {
+		}, function(data) {
 			alert(JSON.stringify(data));
 		});
 	};
