--- a/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/report/table/controller.js.template
+++ b/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/report/table/controller.js.template
@@ -81,7 +81,7 @@ angular.module('page')
 
 	function load() {
 		$http.get(api)
-		.success(function(data) {
+		.then(function(data) {
 			$scope.data = data;
 		});
 	}
