--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/index.html.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/index.html.template
@@ -105,7 +105,7 @@
 #else
 			${dollar}http.get('../../../../../../services/v4/js/${launchpadName}/api/launchpad/views.js?extensionPoint=launchpad-${extensionName}-${perspectiveName}-view&pathSegments=6')
 #end
-			.success(function(views) {
+			.then(function(views) {
 				for (var i = 0 ; i < views.length; i ++) {
 					${dollar}scope.layoutModel.views.push(views[i].id);
 				}
