--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/master-manage/details/controller.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/master-manage/details/controller.js.template
@@ -106,7 +106,7 @@ angular.module('page')
 
 	function ${property.name.toLowerCase()}OptionsLoad() {
 		${dollar}http.get(${property.name.toLowerCase()}OptionsApi)
-		.success(function(data) {
+		.then(function(data) {
 			$scope.${property.name.toLowerCase()}Options = data;
 		});
 	}
@@ -138,11 +138,11 @@ angular.module('page')
 	$scope.loadPage = function(pageNumber) {
 		$scope.dataPage = pageNumber;
 		${dollar}http.get(api + '/count')
-		.success(function(data) {
+		.then(function(data) {
 			$scope.dataCount = data;
 			$scope.dataPages = Math.ceil($scope.dataCount / $scope.dataLimit);
 			${dollar}http.get(api + '?#foreach ($property in $properties)#if($property.relationshipType == "COMPOSITION" && $property.relationshipCardinality == "1_n")${property.name}#end#end=' + $scope.masterEntityId + '&${dollar}offset=' + ((pageNumber - 1) * ${dollar}scope.dataLimit) + '&${dollar}limit=' + ${dollar}scope.dataLimit)
-			.success(function(data) {
+			.then(function(data) {
 				$scope.data = data;
 			});
 		});
@@ -179,11 +179,11 @@ angular.module('page')
 #end
 #end
 			${dollar}http.post(api, JSON.stringify(${dollar}scope.entity))
-			.success(function(data) {
+			.then(function(data) {
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}).error(function(data) {
+			}, function(data) {
 				alert(JSON.stringify(data));
 			});
 		}	
@@ -202,11 +202,11 @@ angular.module('page')
 			${dollar}http.put(api + '/' + ${dollar}scope.entity.${property.name}, JSON.stringify(${dollar}scope.entity))
 #end
 #end
-			.success(function(data) {
+			.then(function(data) {
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}).error(function(data) {
+			}, function(data) {
 				alert(JSON.stringify(data));
 			})
 		}
@@ -218,11 +218,11 @@ angular.module('page')
 		${dollar}http.delete(api + '/' + ${dollar}scope.entity.${property.name})
 #end
 #end
-		.success(function(data) {
+		.then(function(data) {
 			$scope.loadPage($scope.dataPage);
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
-		}).error(function(data) {
+		}, function(data) {
 			alert(JSON.stringify(data));
 		});
 	};
