--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/report/line/controller.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/report/line/controller.js.template
@@ -48,7 +48,7 @@ angular.module('page')
 
 	$scope.load = function() {
 		$http.get(api)
-		.success(function(data) {
+		.then(function(data) {
 #foreach ($property in $properties)
 			var chartData${foreach.index} = [];
 #end
