--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/report/table/controller.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/report/table/controller.js.template
@@ -71,7 +71,7 @@ angular.module('page')
 
 	function ${property.name.toLowerCase()}OptionsLoad() {
 		${dollar}http.get(${property.name.toLowerCase()}OptionsApi)
-		.success(function(data) {
+		.then(function(data) {
 			$scope.${property.name.toLowerCase()}Options = data;
 		});
 	}
@@ -81,7 +81,7 @@ angular.module('page')
 
 	function load() {
 		$http.get(api)
-		.success(function(data) {
+		.then(function(data) {
 			$scope.data = data;
 		});
 	}
