--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/resources/js/ui-core-ng-modules.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/resources/js/ui-core-ng-modules.js.template
@@ -90,7 +90,7 @@ angular.module('ideUiCore', ['ngResource'])
 			$http({
 				url: relativePath + 'services/v4/js/ide-core/services/user-name.js',
 				method: 'GET'
-			}).success(function(data){
+			}).then(function(data){
 				user.name = data;
 			});
 			return user;
