--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/manage/controller.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/manage/controller.js.template
@@ -168,9 +168,9 @@ angular.module('page')
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}), function(data) {
+			}, function(data) {
 				alert(JSON.stringify(data));
-			};
+			});
 		}
 	};
 
@@ -186,9 +186,9 @@ angular.module('page')
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}), function(data) {
+			}, function(data) {
 				alert(JSON.stringify(data));
-			}
+			})
 		}
 	};
 
@@ -202,7 +202,7 @@ angular.module('page')
 			$scope.loadPage($scope.dataPage);
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
-		}).error(function(data) {
+		}, function(data) {
 			alert(JSON.stringify(data));
 		});
 	};
