--- a/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/master-manage/master/controller.js.template
+++ b/templates/template-application-ui-angular-mongodb/src/main/resources/META-INF/dirigible/template-application-ui-angular-mongodb/ui/perspectives/views/master-manage/master/controller.js.template
@@ -171,7 +171,7 @@ angular.module('page')
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}).error(function(data) {
+			}, function(data) {
 				alert(JSON.stringify(data));
 			});
 		}
@@ -188,7 +188,7 @@ angular.module('page')
 				$scope.loadPage($scope.dataPage);
 				toggleEntityModal();
 				$messageHub.messageEntityModified();
-			}).error(function(data) {
+			}, function(data) {
 				alert(JSON.stringify(data));
 			})
 		}
@@ -204,7 +204,7 @@ angular.module('page')
 			$scope.loadPage($scope.dataPage);
 			toggleEntityModal();
 			$messageHub.messageEntityModified();
-		}).error(function(data) {
+		}, function(data) {
 			alert(JSON.stringify(data));
 		});
 	};
