--- a/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/index.html.template
+++ b/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/index.html.template
@@ -106,8 +106,8 @@
 			${dollar}http.get('../../../../../../services/v4/js/${launchpadName}/api/launchpad/views.js?extensionPoint=launchpad-${extensionName}-${perspectiveName}-view&pathSegments=6')
 #end
 			.then(function(views) {
-				for (var i = 0 ; i < views.length; i ++) {
-					${dollar}scope.layoutModel.views.push(views[i].id);
+				for (var i = 0 ; i < views.data.length; i ++) {
+					${dollar}scope.layoutModel.views.push(views.data[i].id);
 				}
 
 			});
