--- a/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/report/line/controller.js.template
+++ b/templates/template-application-ui-angular/src/main/resources/META-INF/dirigible/template-application-ui-angular/ui/perspectives/views/report/line/controller.js.template
@@ -52,9 +52,9 @@ angular.module('page')
 #foreach ($property in $properties)
 			var chartData${foreach.index} = [];
 #end
-			for (var i = 0; i < data.length; i ++) {
+			for (var i = 0; i < data.data.length; i ++) {
 #foreach ($property in $properties)
-				chartData${foreach.index}.push(data[i].${property.name});
+				chartData${foreach.index}.push(data.data[i].${property.name});
 #end
 			}
 			$.jqplot.config.enablePlugins = true;
