--- a/modules/core/core-problems/pom.xml
+++ b/modules/core/core-problems/pom.xml
@@ -51,7 +51,7 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-database-derby</artifactId>
+            <artifactId>dirigible-database-h2</artifactId>
             <version>6.0.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
