pom.xml files cleanup

--- a/releng/spring-boot/pom.xml
+++ b/releng/spring-boot/pom.xml
@@ -247,6 +247,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring.boot.version}</version>
 				<configuration>
 					<mainClass>org.eclipse.dirigible.services.spring.boot.DirigibleRestServiceApplication</mainClass>
 				</configuration>
