--- a/api/api-javascript/api-utils/pom.xml
+++ b/api/api-javascript/api-utils/pom.xml
@@ -21,5 +21,41 @@
 
 		<license.header.location>../../../licensing-header.txt</license.header.location>
 	</properties>
-
+	<profiles>
+		<profile>
+			<id>default</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<maven.javadoc.skip>true</maven.javadoc.skip>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>${exec.maven.plugin}</version>
+						<executions>
+							<execution>
+								<id>install-cjs-to-es6</id>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<workingDirectory>../../../</workingDirectory>
+							<executable>npx</executable>
+							<arguments>
+								<argument>./cjs-to-es6</argument>
+								<argument>api/api-javascript/api-utils/target/classes/META-INF/dirigible/utils/v4</argument>
+							</arguments>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
