--- a/releng/Dockerfile-tomcat
+++ b/releng/Dockerfile-tomcat
@@ -7,7 +7,7 @@ RUN rm -R /usr/local/tomcat/webapps/*
 COPY server-all/target/ROOT.war $CATALINA_HOME/webapps/
 
 RUN rm /usr/local/tomcat/conf/tomcat-users.xml
-RUN wget http://www.dirigible.io/help/conf/tomcat-users.xml -P /usr/local/tomcat/conf/
+RUN wget https://www.dirigible.io/help/conf/tomcat-users.xml -P /usr/local/tomcat/conf/ --no-check-certificate
 
 RUN wget https://repo1.maven.org/maven2/org/postgresql/postgresql/42.1.4/postgresql-42.1.4.jar -P /usr/local/tomcat/lib/
 RUN wget https://repo1.maven.org/maven2/com/sap/cloud/db/jdbc/ngdbc/2.8.12/ngdbc-2.8.12.jar -P /usr/local/tomcat/lib/
