--- a/modules/engines/engine-javascript-graalvm/pom.xml
+++ b/modules/engines/engine-javascript-graalvm/pom.xml
@@ -344,6 +344,13 @@
 			<version>1.20</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>4.9.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<properties>
