--- a/modules/engines/engine-javascript-graalvm/pom.xml
+++ b/modules/engines/engine-javascript-graalvm/pom.xml
@@ -205,6 +205,17 @@
 	</profiles>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.10.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.github.classgraph</groupId>
+			<artifactId>classgraph</artifactId>
+			<version>4.8.128</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.graalvm.sdk</groupId>
