--- a/api/api-facade/api-utils/pom.xml
+++ b/api/api-facade/api-utils/pom.xml
@@ -45,6 +45,21 @@
 		    <artifactId>commons-codec</artifactId>
 		    <version>${commons.codec}</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>${commons.codec}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>core</artifactId>
+			<version>3.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.zxing</groupId>
+			<artifactId>javase</artifactId>
+			<version>3.4.1</version>
+		</dependency>
     </dependencies>
 
 	<properties>
