--- a/modules/bpm/bpm-resources/pom.xml
+++ b/modules/bpm/bpm-resources/pom.xml
@@ -18,6 +18,7 @@
 	<modules>
 		<module>api-bpm</module>
         <module>ide-bpm</module>
+        <module>ide-bpm-menu</module>
         <module>resources-flowable-libs</module>
 	</modules>
 
