--- a/ide/ui/ide-form-builder-menu/pom.xml
+++ b/ide/ui/ide-form-builder-menu/pom.xml
@@ -1,25 +1,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-
-    <parent>
+	
+	<parent>
 		<groupId>org.eclipse.dirigible</groupId>
-		<artifactId>dirigible-bpm-resources-parent</artifactId>
+		<artifactId>dirigible-ide-ui-parent</artifactId>
 		<version>7.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>IDE - UI - BPM</name>
-	<artifactId>dirigible-ide-ui-bpm</artifactId>
-    <packaging>pom</packaging>
+	<name>IDE - UI - Form Builder - Menu</name>
+	<artifactId>dirigible-ide-ui-form-builder-menu</artifactId>
+    <packaging>jar</packaging>
 
 	<properties>
 		<profile.content.phase>generate-sources</profile.content.phase> 
-		<content.repository.name>ide-bpm</content.repository.name>
-		<content.project.name>ide-bpm</content.project.name>
+		<content.repository.name>ide-form-builder-menu</content.repository.name>
+		<content.project.name>ide-form-builder-menu</content.project.name>
 
-		<license.header.location>../../../../licensing-header.txt</license.header.location>
+		<license.header.location>../../../licensing-header.txt</license.header.location>
 	</properties>
 
 </project>
