--- a/modules/bpm/bpm-all/pom.xml
+++ b/modules/bpm/bpm-all/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>dirigible-resources-flowable-libs</artifactId>
             <version>7.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-ide-ui-bpm-menu</artifactId>
+            <version>7.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <properties>
