[OData] Extract OData tests to "odata-core-test" module

--- a/modules/odata/pom.xml
+++ b/modules/odata/pom.xml
@@ -16,7 +16,8 @@
 	<modules>
 		<module>odata-all</module>
 		<module>odata-api</module>
-        <module>odata-core</module>
+		<module>odata-core</module>
+		<module>odata-core-test</module>
 	</modules>
 
 	<properties>
