[OData] Samples Northwind - Initial

--- a/modules/odata/pom.xml
+++ b/modules/odata/pom.xml
@@ -18,6 +18,7 @@
 		<module>odata-api</module>
 		<module>odata-core</module>
 		<module>odata-core-test</module>
+		<module>odata-samples-northwind</module>
 	</modules>
 
 	<properties>
