Create GitFacade with init and commit methods

--- a/api/api-facade/pom.xml
+++ b/api/api-facade/pom.xml
@@ -30,6 +30,7 @@
 		<module>api-indexing</module>
 		<module>api-log</module>
 		<module>api-net</module>
+		<module>api-git</module>
 	</modules>
 
 	<properties>
