--- a/api/api-facade/api-all/pom.xml
+++ b/api/api-facade/api-all/pom.xml
@@ -98,6 +98,11 @@
 			<artifactId>dirigible-api-facade-net</artifactId>
 			<version>7.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-api-facade-git</artifactId>
+			<version>7.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
